--- a/package.json
+++ b/package.json
@@ -1,36 +1,41 @@
 {
-  "name": "virtual-diary",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/bundle.js",
-  "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cinthialandia/virtual-diary.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cinthialandia/virtual-diary/issues"
-  },
-  "homepage": "https://github.com/cinthialandia/virtual-diary#readme",
-  "browserslist": [
-    "last 1 chrome versions"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "dependencies": {
-    "date-fns": "^2.9.0"
-  }
+    "name": "virtual-diary",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/bundle.js",
+    "scripts": {
+        "build": "webpack",
+        "start": "webpack-dev-server --open",
+        "lint": "eslint --ext .js,.html ./src/**"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/cinthialandia/virtual-diary.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/cinthialandia/virtual-diary/issues"
+    },
+    "homepage": "https://github.com/cinthialandia/virtual-diary#readme",
+    "browserslist": [
+        "last 1 chrome versions"
+    ],
+    "devDependencies": {
+        "@babel/core": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
+        "babel-loader": "^8.0.6",
+        "copy-webpack-plugin": "^5.1.1",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "html-webpack-plugin": "^3.2.0",
+        "prettier": "^1.19.1",
+        "webpack": "^4.41.6",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
+    },
+    "dependencies": {
+        "date-fns": "^2.9.0"
+    }
 }
