--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
-        "date-fns": "^2.9.0"
+        "date-fns": "^2.9.0",
+        "navigo": "^7.1.2"
     }
 }
